Change token auth to use UUID, add validation, refactor
* JWT tokens are now being generated with user UUIDs instead of usernames, this will fix users not being able to authenticate using their tokens, after changing their usernames
* JWTFilter is now extracting users UUIDs for authentication
* add validation to AuthController methods
* move all exception handlers to ApiGlobalExceptionHandler
* add exception class specification to each exception handler
* fix updateUser() from UserController using wrong DTO for validation
* create new UserIdNotFoundException
* add loadUserById() method to UserDetailsServiceImpl
* refactor