@@ -10,7 +10,11 @@ import com.auth0.jwt.JWT;
 import com.auth0.jwt.JWTVerifier;
 import com.auth0.jwt.algorithms.Algorithm;
 import com.auth0.jwt.exceptions.JWTVerificationException;
+import com.auth0.jwt.interfaces.Claim;
 import com.auth0.jwt.interfaces.DecodedJWT;
+import com.notehub.notehub.entities.User;
+import com.notehub.notehub.exceptions.user.InvalidUserException;
+import com.notehub.notehub.security.UserDetailsImpl;
 
 import lombok.RequiredArgsConstructor;
 
@@ -18,7 +22,7 @@ import lombok.RequiredArgsConstructor;
 @RequiredArgsConstructor
 public class JWTUtil {
 
-    private static final String USERNAME_CLAIM = "username";
+    private static final String USER_UUID = "UUID";
 
     @Value("${notehub.security.jwt.token-expiration-millis}")
     private long expiration;
@@ -27,31 +31,42 @@ public class JWTUtil {
 
     public String generateJWT(Authentication auth) {
 
+        UserDetailsImpl userDetailsImpl = (UserDetailsImpl) auth.getPrincipal();
+        User user = userDetailsImpl.getUser();
+
+        if (user.getUuid() == null)
+            throw new InvalidUserException("Failed to generate jwt token: User UUID is not set");
+
         return JWT.create()
                 .withSubject("user-details")
                 .withIssuer("self")
                 .withIssuedAt(Instant.now())
-                .withClaim(USERNAME_CLAIM, auth.getName())
+                .withClaim(USER_UUID, user.getUuid().toString())
                 .withExpiresAt(Instant.now().plusMillis(expiration))
                 .sign(Algorithm.HMAC256(secret));
     }
 
     public DecodedJWT validateAndDecodeToken(String token) throws JWTVerificationException {
 
-        if (token.isBlank())
-            throw new JWTVerificationException("JWT Token cannot be blank");
+        if (token == null || token.trim().isEmpty())
+            throw new JWTVerificationException("JWT Token cannot be empty");
 
         JWTVerifier verifier = JWT
                 .require(Algorithm.HMAC256(secret))
                 .withSubject("user-details")
                 .withIssuer("self")
-                .withClaimPresence(USERNAME_CLAIM)
                 .build();
 
-        return verifier.verify(token);
+        DecodedJWT jwt = verifier.verify(token);
+
+        Claim userUuidClaim = jwt.getClaim(USER_UUID);
+        if (userUuidClaim == null || !userUuidClaim.asString().isEmpty())
+            throw new JWTVerificationException("Missing or empty USER_UUID in JWT Token");
+
+        return jwt;
     }
 
-    public String extractUsername(DecodedJWT jwt) {
-        return jwt.getClaim(USERNAME_CLAIM).asString();
+    public String extractUserId(DecodedJWT jwt) {
+        return jwt.getClaim(USER_UUID).asString();
     }
 }
